# dephokey

./: .env.example  .gitignore  Makefile  README.md  app.py  compose.yaml  pyproject.toml  requirements.txt
data/: db_orm.py
docs/: roadmap.md
docs/media/: Database Settings.xlsx
docs/media/GUI_design/: Dephokey GUI.free  login-page-bgimage.afdesign  note-bg.afdesign  (+1 more)
features/data_encryption/: __init__.py  core.py
features/data_filler/: filler_settings.py
features/email_management/: create_email.py  create_message.py  email.py  send_email.py
features/email_sending/: email.py
features/encryption/: __init__.py  core.py
features/models/: __init__.py  creditcard.py  note.py  password_request.py  relationships.py  site.py  user.py
interface/controls/: __init__.py  appbar.py  custom_appbar.py  custom_checkbox.py  custom_datatable.py  custom_elevated_button.py  custom_floating_button.py  custom_searchbar.py  custom_text_field.py  custom_textfield.py  date_picker.py  e_button.py  footer.py  iconlink.py  my_appbar.py  my_footer.py  my_sidebar.py  my_switch.py  searchbar.py  sidebar.py  snackbar.py  switch.py  t_button.py  textfield.py  textlink.py
interface/pages/: __init__.py  admin.py  body_content.py  content_manager.py  dashboard.py  dashboard_page.py  home.py  home_content.py  load_page.py  loading_page.py  login.py  login_page.py  reset_password.py  reset_password_page.py  results_content.py  settings_content.py  signup.py  signup_page.py
shared/: generators.py  logger.py  logger_setup.py  public_id.py  validate.py
shared/utils/: colors.py  masker.py
tests/: creditcard_test.py  loading_page_design.py  log_test.py  note_test.py  site_test.py  testData_databaseORM.py  testFeature_createEmail.py  testFeature_createMessage.py  testFeature_encryptData.py  testFeature_sendEmail.py  testModel_creditCard.py  testModel_note.py  testModel_passwordRequest.py  testModel_site.py  testModel_user.py  testUtil_logger.py  testUtil_masker.py  testUtil_validate.py  test_log.py  test_mailcatcher.py  test_password_request.py  test_site.py  test_user.py  test_validate.py  testmodel_creditcard.py  testmodel_passwordrequest.py  testmodel_site.py  testmodel_user.py  testutil_validate.py  testwidget_site.py  user_test.py
(+40 files in other folders)
