[build-system]


[project]
name = "Dephokey"
version = "0.3.3"
dependencies = [
    "SQLAlchemy~=2.0.36",
    "flet~=0.25.2",
    "nanoid~=2.0.0",
    "Faker~=35.1.0",
    "cryptography~=44.0.1",
    "Jinja2~=3.1.5"
]
requires-python = ">=3.12"
authors = [{name = "Joan Pastor", email = "j.pastor1591@gmail.com"}]
maintainers = [{name = "Joan Pastor", email = "j.pastor1591@gmail.com"}]
description = "Password Manager"
readme = "README.md"

[project.database]
type = "sqlite"
path = "data/database/database.db"