[build-system]


[project]
name = "Dephokey"
version = "0.3.3"
dependencies = [
    "SQLAlchemy~=2.0.36",
    "flet~=0.25.2",
    "nanoid~=2.0.0",
    "Faker~=35.1.0",
    "cryptography~=44.0.1",
    "Jinja2~=3.1.5"
]
requires-python = ">=3.12"
authors = [{name = "Joan Pastor", email = "j.pastor1591@gmail.com"}]
maintainers = [{name = "Joan Pastor", email = "j.pastor1591@gmail.com"}]
description = "Password Manager"
readme = "README.md"

[project.database]
type = "sqlite"
path = "data/database/database.db"

[tool.ruff]
target-version = "py312"
line-length = 120
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []
extend-exclude = ["tests","docs"]

[tool.ruff.isort]
known-first-party = ["features", "interface", "shared"]